# fontcompare

./: Cargo.toml  pyproject.toml
src/: lib.rs
test/: diff.py
