[package]
name = "fontcompare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph_rasterizer = "0.1.8"
image = "0.24.6"
harfbuzz_rs = { git = "https://github.com/simoncozens/harfbuzz_rs.git", branch = "harfbuzz-draw" }
pyo3 = { version = "0.14", features = ["abi3-py36", "extension-module"] }
kurbo = "0.9.0"
rayon = "*"
thread_local = "1.1"

